examples/type_system/failing/59_strict_module_public_effect_missing_with.flx
public fn log(msg: String) -> Unit {
    print(msg)
}

fn main() -> Unit {
}
